// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`密集模式 1`] = `
Array [
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c1 {
  position: relative;
  overflow: hidden;
  background-color: #f5f5f5;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start {
  margin-right: 0px;
  margin-left: 10px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -12px;
}

.c1 > .sinoui-input-adornment--start,
.c1 > .sinoui-input-adornment--text {
  -webkit-transform: translateY(7.5px);
  -ms-transform: translateY(7.5px);
  transform: translateY(7.5px);
}

.c1 > .sinoui-base-input__input {
  padding: 23.5px 12px 8.5px;
  padding-top: 23.5px;
  padding-top: 19.5px;
  padding-bottom: 4.5px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 1px;
}

.c1 > .sinoui-input__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0%;
  left: 0%;
  background-color: rgba(0,0,0,0.87);
  pointer-events: none;
  z-index: 2;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  opacity: 0;
}

.c1:hover > .sinoui-input__overlay {
  opacity: 0.04;
}

<div
    className="c0 sinoui-base-input c1"
    data-testid="baseInput"
    onClick={[Function]}
  >
    <input
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
    <div
      className="sinoui-input__overlay"
    />
  </div>,
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c1 {
  position: relative;
  overflow: hidden;
  background-color: #f5f5f5;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start {
  margin-right: 0px;
  margin-left: 10px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -12px;
}

.c1 > .sinoui-input-adornment--start,
.c1 > .sinoui-input-adornment--text {
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c1 > .sinoui-base-input__input {
  padding: 23.5px 12px 8.5px;
  padding-top: 7.5px;
  padding-top: 3.5px;
  padding-bottom: 4.5px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 1px;
}

.c1 > .sinoui-input__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0%;
  left: 0%;
  background-color: rgba(0,0,0,0.87);
  pointer-events: none;
  z-index: 2;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  opacity: 0;
}

.c1:hover > .sinoui-input__overlay {
  opacity: 0.04;
}

<div
    className="c0 sinoui-base-input c1"
    data-testid="baseInput"
    onClick={[Function]}
  >
    <input
      className="sinoui-base-input__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
    <div
      className="sinoui-input__overlay"
    />
  </div>,
]
`;

exports[`无标签 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c1 {
  position: relative;
  overflow: hidden;
  background-color: #f5f5f5;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start {
  margin-right: 0px;
  margin-left: 10px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -12px;
}

.c1 > .sinoui-input-adornment--start,
.c1 > .sinoui-input-adornment--text {
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c1 > .sinoui-base-input__input {
  padding: 23.5px 12px 8.5px;
  padding-top: 7.5px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 1px;
}

.c1 > .sinoui-input__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0%;
  left: 0%;
  background-color: rgba(0,0,0,0.87);
  pointer-events: none;
  z-index: 2;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  opacity: 0;
}

.c1:hover > .sinoui-input__overlay {
  opacity: 0.04;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="sinoui-input__overlay"
  />
</div>
`;

exports[`正确渲染填充模式的input 1`] = `[Function]`;

exports[`渲染不可用状态下的填充模式的Input 1`] = `[Function]`;

exports[`渲染错误状态下填充模式的Input 1`] = `[Function]`;

exports[`聚焦状态 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c0 > .sinoui-base-input__input {
  padding: 3.5px 0 4.5px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c0 > .sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > .sinoui-base-input__input::-ms-clear {
  display: none;
}

.c0 > .sinoui-base-input__input:focus {
  outline: 0;
}

.c0 > .sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c0.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c0 .sinoui-base-input__clear {
  width: 18px;
}

.c0 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c1 {
  position: relative;
  overflow: hidden;
  background-color: #f5f5f5;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c1 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start {
  margin-right: 0px;
  margin-left: 10px;
}

.c1 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -6px;
}

.c1 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c1 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -12px;
}

.c1 > .sinoui-input-adornment--start,
.c1 > .sinoui-input-adornment--text {
  -webkit-transform: translateY(7.5px);
  -ms-transform: translateY(7.5px);
  transform: translateY(7.5px);
}

.c1 > .sinoui-base-input__input {
  padding: 23.5px 12px 8.5px;
  padding-top: 23.5px;
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c1::after {
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1 > .sinoui-input__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0%;
  left: 0%;
  background-color: rgba(0,0,0,0.87);
  pointer-events: none;
  z-index: 2;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  opacity: 0.12;
}

<div
  className="c0 sinoui-base-input c1"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    className="sinoui-base-input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="sinoui-input__overlay"
  />
</div>
`;
